<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KanbanBoard</string>
    <string name="tab_label_todo">TODO</string>
    <string name="tab_label_doing">DOING</string>
    <string name="tab_label_done">DONE</string>
    <string name="delete_dialog_title">Delete task</string>
    <string name="delete_dialog_text">Are you sure you want to delete this task?</string>
    <string name="delete_dialog_yes_button_label">Yes</string>
    <string name="delete_dialog_no_button_label">No</string>
    <string name="new_task">New task</string>
    <string name="delete_btn_cont_desc">Delete button</string>
    <string name="color_btn_cont_desc">Open/close color palette button</string>
    <string name="drag_btn_cont_desc">Hold and drag task button</string>
    <string name="move_btn_cont_desc">Send task to next tasklist button</string>
    <string name="blue_btn_cont_desc">Blue color button</string>
    <string name="green_btn_cont_desc">Green color button</string>
    <string name="yellow_btn_cont_desc">Yellow color button</string>
    <string name="pink_btn_cont_desc">Pink color button</string>
    <string name="task_edit_text_hint">Enter your task here</string>
</resources>