<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/task_card_yellow">

    <ImageView
        android:id="@+id/color_palette_background"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/color_palette_background"
        />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/task_button_background"
        android:backgroundTint="#1E202124"
        android:backgroundTintMode="src_in"
        android:padding="8dp"
        android:tint="#8C202124"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_move"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@drawable/ic_delete_24px"
        android:contentDescription="@string/delete_btn_cont_desc" />

    <ImageButton
        android:id="@+id/btn_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/task_button_background"
        android:backgroundTint="#1E202124"
        android:backgroundTintMode="src_in"
        android:padding="8dp"
        android:tint="#8C202124"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@drawable/ic_palette_24px"
        android:contentDescription="@string/color_btn_cont_desc" />

    <ImageButton
        android:id="@+id/btn_drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/task_button_background"
        android:backgroundTint="#1E202124"
        android:backgroundTintMode="src_in"
        android:padding="8dp"
        android:tint="#8C202124"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@drawable/ic_drag_indicator_24px"
        android:contentDescription="@string/drag_btn_cont_desc" />

    <EditText
        android:id="@+id/task_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:padding="16dp"
        android:hint="@string/task_edit_text_hint"
        android:textAlignment="textStart"
        android:textColor="@color/task_text"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Task edit text test label"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/btn_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/task_button_background"
        android:backgroundTint="#1E202124"
        android:backgroundTintMode="src_in"
        android:padding="8dp"
        android:tint="#8C202124"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@drawable/ic_arrow_forward_24px"
        android:contentDescription="@string/move_btn_cont_desc" />

    <ImageButton
        android:id="@+id/blue_color_picker"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/blue_task"
        android:backgroundTintMode="multiply"
        android:background="@drawable/task_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_color"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@android:color/transparent"
        android:contentDescription="@string/blue_btn_cont_desc" />

    <ImageButton
        android:id="@+id/green_color_picker"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/task_button_color"
        android:backgroundTint="@color/green_task"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blue_color_picker"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@android:color/transparent"
        android:contentDescription="@string/green_btn_cont_desc" />

    <ImageButton
        android:id="@+id/yellow_color_picker"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/yellow_task"
        android:backgroundTintMode="multiply"
        android:background="@drawable/task_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/green_color_picker"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@android:color/transparent"
        android:contentDescription="@string/yellow_btn_cont_desc" />

    <ImageButton
        android:id="@+id/pink_color_picker"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/pink_task"
        android:backgroundTintMode="multiply"
        android:background="@drawable/task_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yellow_color_picker"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text"
        app:srcCompat="@android:color/transparent"
        android:contentDescription="@string/pink_btn_cont_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>